--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
         <h4> About</h4>
         <p><strong> Name:</strong> Aira Joy Valencia</p>
         <p><strong> Age:</strong> 19 years old</p>
+        <p> <a href= "Curvitae.pdf">Curriculum Vitae </a> </p>
+          
 
     </div>
    
