--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h4> About</h4>
         <p><strong> Name:</strong> Aira Joy Valencia</p>
         <p><strong> Age:</strong> 19 years old</p>
-        <p> <a href= "Curvitae.pdf">Curriculum Vitae </a> </p>
+        <button> <a href= "Curvitae.pdf">Curriculum Vitae </a> </button>
           
 
     </div>
