--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h4> About</h4>
         <p><strong> Name:</strong> Aira Joy Valencia</p>
         <p><strong> Age:</strong> 19 years old</p>
-       <button onclick = gotoLink(this) value = "https://docs.google.com/document/d/e/2PACX-1vRO4Lz9CQpWRiYOdo8lcnPQ66pmsR-lQ_cDJLWCRO5GMz7jw_cW-yyI5r66LspyAwjYEzPoLEFYKyJQ/pub"> Curriculum Vitae </button>
+       <button><a href="Curvitae.pdf"> Curriculum Vitae </a> </button>
           
 
     </div>
